# camera-visualization

./: .gitignore  README.md  pyproject.toml
scripts/: dev.sh
src/camviz/: __init__.py
src/camviz/api/: app.py  models.py
src/camviz/assets/objects/: bicycle.json  pedestrian.json  sedan.json  traffic_cone.json  truck.json
src/camviz/core/: __init__.py  engine.py  geometry.py  object_assets.py  object_geometry.py  software_render.py  transforms.py
tests/: test_api.py  test_projection_core.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
web/src/components/: DebugPanel.tsx  ImageProjectionView.tsx  NumericField.tsx  ParameterPanel.tsx  Scene3DView.tsx
web/src/lib/: api.ts  cameraModel.test.ts  cameraModel.ts  persistence.test.ts  persistence.ts  projectionMath.test.ts  projectionMath.ts  sceneMath.test.ts  sceneMath.ts
web/src/store/: useAppStore.ts
